Interim check-in

--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -245,28 +245,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 1214.925659\n",
-      "Minibatch accuracy: 14.8%\n",
-      "Validation accuracy: 28.5%\n",
-      "Minibatch loss at step 500: 211.471466\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 77.7%\n",
-      "Minibatch loss at step 1000: 46.096058\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Validation accuracy: 87.4%\n",
-      "Minibatch loss at step 1500: 10.551399\n",
-      "Minibatch accuracy: 93.0%\n",
-      "Validation accuracy: 87.9%\n",
-      "Minibatch loss at step 2000: 2.810660\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 88.2%\n",
-      "Minibatch loss at step 2500: 1.043741\n",
-      "Minibatch accuracy: 89.8%\n",
+      "Minibatch loss at step 0: 1225.445679\n",
+      "Minibatch accuracy: 10.9%\n",
+      "Validation accuracy: 30.4%\n",
+      "Minibatch loss at step 500: 209.552673\n",
+      "Minibatch accuracy: 82.0%\n",
+      "Validation accuracy: 82.5%\n",
+      "Minibatch loss at step 1000: 46.156479\n",
+      "Minibatch accuracy: 90.6%\n",
       "Validation accuracy: 86.9%\n",
-      "Minibatch loss at step 3000: 0.762697\n",
+      "Minibatch loss at step 1500: 10.585514\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Validation accuracy: 87.6%\n",
+      "Minibatch loss at step 2000: 2.816603\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Validation accuracy: 87.8%\n",
+      "Minibatch loss at step 2500: 1.050631\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Validation accuracy: 87.2%\n",
+      "Minibatch loss at step 3000: 0.772781\n",
       "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 88.0%\n",
-      "Test accuracy: 90.5%\n"
+      "Validation accuracy: 87.5%\n",
+      "Test accuracy: 90.8%\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -363,31 +363,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 1275.110962\n",
-      "Minibatch accuracy: 13.3%\n",
-      "Validation accuracy: 37.9%\n",
-      "Minibatch loss at step 1: 1748.878662\n",
-      "Minibatch accuracy: 39.8%\n",
-      "Validation accuracy: 37.2%\n",
-      "Minibatch loss at step 2: 2400.574463\n",
-      "Minibatch accuracy: 40.6%\n",
-      "Validation accuracy: 40.9%\n",
-      "Minibatch loss at step 3: 1626.772217\n",
-      "Minibatch accuracy: 43.8%\n",
-      "Validation accuracy: 41.7%\n",
-      "Minibatch loss at step 4: 1406.380127\n",
-      "Minibatch accuracy: 43.0%\n",
-      "Validation accuracy: 55.5%\n",
-      "Minibatch loss at step 5: 1393.274048\n",
-      "Minibatch accuracy: 64.1%\n",
-      "Validation accuracy: 64.0%\n",
-      "Minibatch loss at step 6: 1150.371338\n",
-      "Minibatch accuracy: 62.5%\n",
-      "Validation accuracy: 71.3%\n",
-      "Minibatch loss at step 7: 1044.677002\n",
-      "Minibatch accuracy: 68.8%\n",
-      "Validation accuracy: 71.2%\n",
-      "Test accuracy: 78.6%\n"
+      "Minibatch loss at step 0: 1287.404785\n",
+      "Minibatch accuracy: 14.8%\n",
+      "Validation accuracy: 32.6%\n",
+      "Minibatch loss at step 500: 210.131378\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 1000: 46.834164\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.1%\n",
+      "Minibatch loss at step 1500: 10.452554\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 75.1%\n",
+      "Minibatch loss at step 2000: 2.393794\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.4%\n",
+      "Minibatch loss at step 2500: 0.618331\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 3000: 0.214510\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.6%\n",
+      "Test accuracy: 83.7%\n"
      ]
     }
    ],
@@ -430,7 +427,8 @@
     "  test_relu_out = tf.nn.relu(tf.matmul(tf_test_dataset, weights_layer1) + biases_layer1)\n",
     "  test_prediction = tf.nn.softmax(tf.matmul(test_relu_out, weights_layer2) + biases_layer2)\n",
     "    \n",
-    "num_steps = 8\n",
+    "num_steps = 3001\n",
+    "num_batches = 3\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "  tf.initialize_all_variables().run()\n",
@@ -438,7 +436,7 @@
     "  for step in range(num_steps):\n",
     "    # Pick an offset within the training data, which has been randomized.\n",
     "    # Note: we could use better randomization across epochs.\n",
-    "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "    offset = int(((step % num_batches) * batch_size) * np.random.random_sample())\n",
     "    # Generate a minibatch.\n",
     "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
     "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
@@ -448,7 +446,7 @@
     "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "    _, l, predictions = session.run(\n",
     "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "    if (step % 1 == 0):\n",
+    "    if (step % 500 == 0):\n",
     "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
